--- a/cliente-registro.html
+++ b/cliente-registro.html
@@ -42,6 +42,7 @@
       <input name="colonia" type="text" placeholder="Colonia" required />
       <input name="municipio" type="text" placeholder="Municipio" required />
       <input name="codigo_postal" id="codigo_postal" type="text" placeholder="Código Postal" required />
+      <input name="referencias" id="referencias" type="text" placeholder="Referencias (opcional)" /> <!-- 🔧 AÑADIDO -->
       <div id="aviso-cp" style="color: red; font-size: 0.85rem;"></div>
 
       <label for="estado">Estado:</label>
